[AM-401] feat: Adapted MEMB to lottie-ios v4.1.2. Release 3.2.1

--- a/MembiOS.xcframework/ios-arm64/MembiOS.framework/Modules/MembiOS.swiftmodule/arm64-apple-ios.abi.json
+++ b/MembiOS.xcframework/ios-arm64/MembiOS.framework/Modules/MembiOS.swiftmodule/arm64-apple-ios.abi.json
@@ -12372,6 +12372,13 @@
             "printedName": "CustomDebugStringConvertible",
             "usr": "s:s28CustomDebugStringConvertibleP",
             "mangledName": "$ss28CustomDebugStringConvertibleP"
+          },
+          {
+            "kind": "Conformance",
+            "name": "Sendable",
+            "printedName": "Sendable",
+            "usr": "s:s8SendableP",
+            "mangledName": "$ss8SendableP"
           }
         ]
       }
