--- a/MembiOS.xcframework/ios-x86_64-simulator/MembiOS.framework/Modules/MembiOS.swiftmodule/x86_64-apple-ios-simulator.abi.json
+++ b/MembiOS.xcframework/ios-x86_64-simulator/MembiOS.framework/Modules/MembiOS.swiftmodule/x86_64-apple-ios-simulator.abi.json
@@ -12372,6 +12372,13 @@
             "printedName": "CustomDebugStringConvertible",
             "usr": "s:s28CustomDebugStringConvertibleP",
             "mangledName": "$ss28CustomDebugStringConvertibleP"
+          },
+          {
+            "kind": "Conformance",
+            "name": "Sendable",
+            "printedName": "Sendable",
+            "usr": "s:s8SendableP",
+            "mangledName": "$ss8SendableP"
           }
         ]
       }
